<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundw"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="304dp"
        android:layout_height="620dp"
        android:layout_margin="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/edit_text_color"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_terms_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/terms"
                android:textColor="@color/colorAccent"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/text_terms_1"
                android:layout_width="wrap_content"
                android:layout_height="299dp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/terms_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_update_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/update"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_update_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/update_1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_update_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/update_2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_update_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/update_3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_update_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/update_4"
                android:textSize="16sp" />

            <com.varunest.sparkbutton.SparkButton
                android:id="@+id/spark_button"
                android:layout_width="223dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="40dp"
                android:onClick="trial_mode"
                app:sparkbutton_activeImage="@drawable/ic_fingerprint_black_24dp"
                app:sparkbutton_iconSize="140dp"
                app:sparkbutton_inActiveImage="@drawable/ic_fingerprint_black_24dp"
                app:sparkbutton_primaryColor="@color/primary_color"
                app:sparkbutton_secondaryColor="@color/secondary_color" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>